2006-09-07  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-signal.c: New test prog.

2006-09-04  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-running.c: Accept socket and read() for it.

2006-09-01  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-running.c: New test prog.

2006-08-29  Yong Zheng  <zhengyo@cn.ibm.com>

	* funit-ppc64-regs.S: New PPC64 specific program.

2006-08-23  Yong Zheng  <zhengyo@cn.ibm.com>

	* funit-breakpoint.c (main): Get the function address 
	instead of address of function descriptor on PPC64.

2006-08-16  Tim Moore  <timoore@redhat.com>

	* funit-x8664-regs.s: Use some more interesting 64 bit values to
	stress the long and BigInteger Register APIs.
	* funit-x8664-modify.s: ditto.

2006-08-15  Mark Wielaard  <mark@klomp.org>

	* funit-breakpoints.c: New test prog.

2006-08-07  Tim Moore  <timoore@redhat.com>

	* funit-x8664-modify.S: New x8664 specific program.

2006-08-03  Tim Moore  <timoore@redhat.com>

	* funit-x8664-regs.S: New x8664 specific program.

2006-07-28  Adam Jocksch  <ajocksch@redhat.com>

	* funit-rt-looper.c: Now takes the signal to send as a parameter.

	* funit-rt-looper.c: Moved from frysk.rt.tests.

2006-07-05  Sami Wagiaalla  <swagiaal@redhat.com>

	* funit-syscallloop.c: Added a command line option (-1)
	which makes the program make system calls in an infinite
	loop.

2006-06-27  Stepan Kasal  <kasal@ucw.cz>

	* funit-ia32-modify.S, funit-ia32-regs.S: Make the stack
	non-executable, using the recipe from Jakub Jelinek.

2006-06-26  Phil Muldoon  <pmuldoon@redhat.com>

	* funit-forks.c: Removed waits.

2006-06-25  Phil Muldoon  <pmuldoon@redhat.com>

	* funit-forks.c: Fix warnings. Removed printed output.
	* funit-forks.c: Added Chris Moller's fork
	stress tester. 

2006-06-23 	Nurdin Premji <npremji@redhat.com>
	* funit-child.c Added signal SIGBUS to exit a thread.

2006-06-21  Stepan Kasal  <kasal@ucw.cz>

	* util.h: Include linux.syscall.h; the calers need not to do that.